# btc-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/consensus/: Cargo.toml
crates/consensus/src/: block_filter.rs  block_template.rs  chain.rs  checkpoints.rs  ffi.rs  lib.rs  opcode_plugin.rs  parallel.rs  reorg.rs  script_engine.rs  sig_verify.rs  sighash.rs  signet.rs  taproot.rs  utxo.rs  validation.rs  versionbits.rs  witness.rs
crates/consensus/tests/: differential.rs  edge_cases.rs  proptest_sighash.rs
crates/electrum/: Cargo.toml
crates/electrum/src/: error.rs  handler.rs  lib.rs  methods.rs  protocol.rs  server.rs
crates/exex/: Cargo.toml
crates/exex/src/: lib.rs  ordinals.rs  runes.rs
crates/exex/tests/: integration.rs
crates/forge/: Cargo.toml
crates/forge/src/: debugger.rs  lib.rs  miniscript.rs  script_builder.rs  script_env.rs  tests.rs  tx_builder.rs  weight.rs
crates/forge/tests/: miniscript_execution.rs
crates/mempool/: Cargo.toml
crates/mempool/src/: cluster.rs  lib.rs  policy.rs  pool.rs  rbf.rs  truc.rs
crates/network/: Cargo.toml
crates/network/src/: addrv2.rs  codec.rs  compact_blocks.rs  connection.rs  discovery.rs  erlay.rs  handshake.rs  lib.rs  message.rs  package_relay.rs  peer.rs  protocol.rs  tx_relay.rs  v2transport.rs
crates/node/: Cargo.toml
crates/node/src/: builder.rs  cli.rs  explorer.rs  http.rs  lib.rs  main.rs  nostr.rs  output.rs  state.rs  sync.rs  zmq.rs
crates/primitives/: Cargo.toml  README.md
crates/primitives/src/: address.rs  amount.rs  bech32.rs  bip21.rs  bip32.rs  block.rs  compact.rs  descriptor.rs  encode.rs  hash.rs  lib.rs  network.rs  psbt.rs  script.rs  silent_payments.rs  transaction.rs
crates/primitives/src/bip39/: bip39_wordlist.rs  mod.rs
crates/primitives/tests/: core_vectors.rs  encoding_edge_cases.rs  proptest_roundtrips.proptest-regressions  proptest_roundtrips.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: handler.rs  lib.rs  methods.rs  server.rs
crates/stages/: Cargo.toml
crates/stages/src/: address_index.rs  bodies.rs  execution.rs  headers.rs  indexing.rs  lib.rs  pipeline.rs  stage.rs
crates/storage/: Cargo.toml
crates/storage/src/: leveldb_backend.rs  lib.rs  provider.rs  pruning.rs  qmdb_backend.rs  redb_backend.rs  snapshot.rs  tables.rs  traits.rs  utxo_store.rs
crates/test-harness/: Cargo.toml
crates/test-harness/src/: lib.rs
crates/test-harness/tests/: chaos.rs  complex_scripts.rs  showcase.rs
devnet/: Dockerfile  README.md  kurtosis.yml
examples/: address_types.rs  decode_transaction.rs  exex_plugin.rs  forge_htlc.rs  miniscript_compile.rs  regtest_mine.rs  script_playground.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bech32_decode.rs  fuzz_block_decode.rs  fuzz_block_template.rs  fuzz_p2p_message.rs  fuzz_script_execute.rs  fuzz_transaction_decode.rs  fuzz_varint_decode.rs  fuzz_witness_verify.rs
patches/: qmdb-init-fix.patch
