[package]
name = "btc-forge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
btc-primitives = { workspace = true }
btc-consensus = { workspace = true }
btc-test = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
secp256k1 = { workspace = true }
