[package]
name = "btc-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["v1", "v2", "erlay", "compact-blocks"]
v1 = []                                     # Standard P2P protocol
v2 = ["dep:chacha20poly1305"]               # BIP324 encrypted transport
erlay = []                                  # BIP330 set reconciliation
compact-blocks = []                         # BIP152 compact block relay
compact-filters = []                        # BIP157/158 compact block filters serving
package-relay = []                          # Package relay for CPFP-aware relay

[dependencies]
btc-primitives = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
chacha20poly1305 = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
