[package]
name = "btc-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["full"]
full = [
    "btc-consensus/default",
    "btc-storage/default",
    "btc-network/default",
    "btc-mempool/default",
    "btc-rpc/default",
    "btc-exex/default",
]

[dependencies]
btc-primitives = { workspace = true }
btc-consensus = { workspace = true }
btc-storage = { workspace = true }
btc-mempool = { workspace = true }
btc-network = { workspace = true }
btc-stages = { workspace = true }
btc-rpc = { workspace = true }
btc-exex = { workspace = true }
btc-forge = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
secp256k1 = { workspace = true }

redb = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
name = "btc_node"
path = "src/lib.rs"

[[bin]]
name = "btc-node"
path = "src/main.rs"
