[package]
name = "btc-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ripemd = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
bytes = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
hex = { workspace = true }
