[package]
name = "btc-primitives"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bitcoin primitives library — types, encoding, hashing, script, bech32. No rust-bitcoin dependency."
repository = "https://github.com/androolloyd/btc-rust"
keywords = ["bitcoin", "crypto", "blockchain"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
pbkdf2 = { workspace = true }
ripemd = { workspace = true }
secp256k1 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
bytes = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
hex = { workspace = true }
