[package]
name = "btc-primitives"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bitcoin primitives library — types, encoding, hashing, script, bech32. No rust-bitcoin dependency."
repository = "https://github.com/androolloyd/btc-rust"
keywords = ["bitcoin", "crypto", "blockchain"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"

[features]
default = ["bip32", "bip39", "bip21", "psbt", "descriptor", "silent-payments", "serde"]
bip32 = []              # HD key derivation (BIP32)
bip39 = []              # Mnemonic seed phrases (BIP39)
bip21 = []              # Bitcoin URI parsing (BIP21)
psbt = []               # Partially Signed Bitcoin Transactions
descriptor = []         # Output descriptors (BIP380-387)
silent-payments = []    # Silent payments (BIP352)
serde = ["dep:serde"]   # Optional serde support

[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true }
hmac = { workspace = true }
pbkdf2 = { workspace = true }
ripemd = { workspace = true }
secp256k1 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
bytes = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
hex = { workspace = true }
