[package]
name = "btc-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["json-rpc"]
json-rpc = []        # Bitcoin Core-compatible JSON-RPC server
esplora = []         # Esplora-compatible REST API

[dependencies]
btc-primitives = { workspace = true }
btc-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
