[package]
name = "btc-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["redb", "qmdb", "leveldb", "snapshot"]
redb = ["dep:redb"]         # redb storage backend
qmdb = ["dep:qmdb"]         # QMDB storage backend (LayerZero's Quick Merkle Database)
leveldb = []                 # Bitcoin Core chainstate adapter (read-only)
snapshot = []                # AssumeUTXO snapshot loading

[dependencies]
btc-primitives = { workspace = true }
btc-consensus = { workspace = true }
redb = { workspace = true, optional = true }
qmdb = { workspace = true, optional = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
