[package]
name = "btc-test"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["ordinals", "runes", "covenants"]
ordinals = ["btc-exex/ordinals"]     # Enable ordinals test support
runes = ["btc-exex/runes"]           # Enable runes test support
covenants = ["btc-consensus/covenants"] # Enable covenant opcode tests

[dependencies]
btc-primitives = { workspace = true }
btc-consensus = { workspace = true }
btc-storage = { workspace = true }
btc-mempool = { workspace = true }
btc-network = { workspace = true }
btc-exex = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
secp256k1 = { workspace = true }
sha2 = { workspace = true }
ripemd = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sha1 = { workspace = true }
